[tool.poetry]
name = "nekro-plugin-starseeker-search"
version = "0.1.2"
description = "Starseeker Search for Nekro Agent"
authors = ["Akiyo_Codex"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
nekro-agent = "^0.9.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
